Compiler warnings for gettimeofday in Inet4/Inet6AddressImpl.c

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 7
    • Affects Version/s: 7
    • Component/s: core-libs
    • None
    • b66
    • generic
    • linux

      Compiler warns that gettimeofday() is not explicitly declared in Inet4/Inet6AddressImpl.c:
          ../../../src/solaris/native/java/net/Inet4AddressImpl.c:381: warning: implicit declaration of function 'gettimeofday'
          ../../../src/solaris/native/java/net/Inet6AddressImpl.c:511: warning: implicit declaration of function 'gettimeofday'
          ../../../src/solaris/native/java/net/Inet4AddressImpl.c:381: warning: implicit declaration of function 'gettimeofday'
          ../../../src/solaris/native/java/net/Inet6AddressImpl.c:511: warning: implicit declaration of function 'gettimeofday'
          ../../../src/solaris/native/java/net/Inet4AddressImpl.c:381: warning: implicit declaration of function 'gettimeofday'
          ../../../src/solaris/native/java/net/Inet6AddressImpl.c:511: warning: implicit declaration of function 'gettimeofday'
          ../../../src/solaris/native/java/net/Inet4AddressImpl.c:381: warning: implicit declaration of function 'gettimeofday'
          ../../../src/solaris/native/java/net/Inet6AddressImpl.c:511: warning: implicit declaration of function 'gettimeofday'

            Assignee:
            Jean-Christophe Collet (Inactive)
            Reporter:
            Yujiang Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: