6562614: Compiler warnings for gettimeofday in Inet4/Inet6AddressImpl.c

Add missing header to remove compiler warnings.

Reviewed-by: martin